--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,28 +7,17 @@
 <p>現在時間：<span id="nowTime"></span></p>
 
 <div class="text-center">
-    <h1 class="display-4">歡迎來到我的 ASP.NET Core 網站！</h1>
+    <h1 class="display-4">歡迎來到我的<br> ASP.NET Core 網站！</h1>
 <p>這是我的第一個 ASP.NET Core 練習專案。</p>
+<form id="myForm">
+        <label for="name">你的名字：</label>
+        <input type="text" id="name" class="form-control" style="width: 300px; display: inline-block;" placeholder="請輸入你的名字" />
+    <button type="submit">送出</button>
+</form>
 
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+
+
 </div>
 
-
-
-<script>
-function pad(n) {
-    return n < 10 ? '0' + n : n;
-}
-function updateTime() {
-    var now = new Date();
-    var formatted = now.getFullYear() + '-' +
-        pad(now.getMonth() + 1) + '-' +
-        pad(now.getDate()) + ' ' +
-        pad(now.getHours()) + ':' +
-        pad(now.getMinutes()) + ':' +
-        pad(now.getSeconds());
-    document.getElementById('nowTime').textContent = formatted;
-}
-setInterval(updateTime, 1000);
-updateTime(); // 頁面載入馬上顯示一次
-</script>
+<script src="@Url.Content("~/js/index.js")"></script>
